- Fixed scrum notes list container bottom spacing

--- a/src/_style/style-sheets/scrum/component/scrum-notes.scss
+++ b/src/_style/style-sheets/scrum/component/scrum-notes.scss
@@ -84,7 +84,7 @@
 
 	#scrum-notes-note-container {
 		height: calc( 100% - 170px );
-		padding: 0 20px;
+		padding: 0 20px 10px;
 		overflow: auto;
 		// display: none;
 
